# mkt-sim

./: README.md  compose.yml
.github/workflows/: ci.yaml  cicd.yaml
exchange/: Cargo.toml  Earthfile  README.md  Rocket.toml  compose.yml  diesel.toml  litefs.yml
exchange/.sqlx/: query-3b528abde52bba745cfb0153256d06540434de4fdefba484d05d31265cfde683.json  query-57c83b6a6482a9a0c853340568a6a3e91bdcab1a73c8bd57434f26abe8db0910.json  query-6612fcc53d4e89ddf2f1fc9857d07cc2cfa1c8891e2f79b2f9ae4b7ddc2e2de3.json  query-860664ec9c8b3dcb9b4faae065c2ed6ac7cfebeaf82d55623bf050381f1fb4c0.json  query-aceab9312d4fa9e7b48cec4c4a14ac89bdf8d1575c1fccf3d5fb1b8f76b8fd49.json  query-af77db04fa82e6f846043a3ecc2e62659dd2ea39f514dd3610836347caf1d823.json  query-f3078a290e5b2cbdfb160346a43ace248442288871c936f53123924405a05137.json
exchange/api/: Cargo.toml  Earthfile  README.md  compose.yml
exchange/api/migrations/2024-05-20-072058_accountservices/: up.sql
exchange/api/migrations/2024-05-20-090957_assets/: down.sql
exchange/api/src/: api.rs
exchange/api/src/api/: accounts.rs  auth.rs  schema.rs  types.rs
exchange/matching-engine/: Cargo.toml
exchange/matching-engine/protocol/src/: client.rs  io.rs  lib.rs
exchange/matching-engine/src/: journaler.rs  lib.rs  main.rs
exchange/migrations/: 20240519104401_instruments.sql  20240520032839_accountservices.sql  instruments.sql
exchange/migrations/2024-05-20-072058_accountservices/: up.sql
exchange/migrations/2024-05-20-090957_assets/: up.sql
exchange/protocol/: Cargo.toml
exchange/protocol/src/: client.rs  lib.rs
exchange/src/: accounts.rs  accountservices.rs  api.rs  assets.rs  auth.rs  ca-certificate.crt  lib.rs  main.rs  models.rs  orders.rs  process.rs  schema.rs  types.rs
exchange/src/api/: accounts.rs  accountservices.rs  assets.rs  auth.rs  instruments.rs  orders.rs  types.rs
exchange/src/api/scripts/: order.lua
k8s/exchange/: api.yml  deployment.yml
k8s/tigerbeetle/: configmap.nginx.yaml  statefulset.yml  tigerbeetle.yaml
