[package]
edition = "2021"
name = "exchange"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive", "env"] }
figment = { version = "0.10.19", features = ["toml"] }
rocket = "0.5.0"
rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"] }
serde = "1.0.202"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "migrate"] }
thiserror = "1.0.61"
tigerbeetle-unofficial = { version = "0.3.0", features = [
  "tokio-rt-multi-thread",
] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "tracing"] }
tracing = "0.1.40"
