[package]
edition = "2021"
name = "exchange"
version = "0.1.0"

[dependencies]
async-trait = "0.1.80"
bcrypt = "0.15.1"
bitflags = { version = "2.5.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
diesel = { version = "2.1.6", features = ["chrono", "time", "serde_json", "uuid", "postgres"] }
diesel_async_migrations = "0.12.0"
email_address = "0.2.4"
figment = { version = "0.10.19", features = ["toml"] }
fixed = { version = "1.27.0", features = ["serde-str"] }
hickory-resolver = "0.24.1"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
redis = { version = "=0.23.3", features = ["tokio-native-tls-comp"] }
redis-derive = "0.1.7"
rocket = { version = "0.5.0", features = ["json", "uuid"] }
rocket_db_pools = { version = "=0.1.0", features = ["deadpool_redis", "diesel_postgres"] }
rocket_okapi = { version = "0.8.0", features = ["swagger", "rocket_db_pools"] }
schemars = { version = "0.8.21", features = ["chrono", "uuid", "uuid1"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.202"
strum = "0.26.2"
strum_macros = "0.26.2"
thiserror = "1.0.61"
tigerbeetle-unofficial = { version = "0.3.0", features = [
  "tokio-rt-multi-thread",
] }
tokio = { version = "1.37.0", features = [
  "rt-multi-thread",
  "macros",
  "tracing",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["serde", "v4", "v5", "v7"] }
